fixed overflow?

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,7 +60,6 @@ html, body {
     background-attachment: fixed;
 }
 
-
 /*SCROLLBAR*/
 /*Chrome, Edge, Safari*/
 *::-webkit-scrollbar {
@@ -87,7 +86,6 @@ html, body {
 header {
     background-color: #000000;
     padding: 10px;
-    
     border-bottom: solid 1px #DA99A8;
 }
 
@@ -121,6 +119,7 @@ nav ul {
     list-style-type: none;
 }
 
+/*Hamburger menu, only show on tablets/phones*/
 .hamburger {
     background-color: transparent;
     border: 0;
@@ -128,7 +127,6 @@ nav ul {
     font-size: 25px;
     cursor: pointer;
     display: none;
-    padding-right: 10px;
 }
 
 .hamburger:focus {
@@ -280,13 +278,19 @@ footer a:hover {
 /*END OF FOOTER*/
 
 /*MEDIA QUERIES*/
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 600px) {
+    * {
+        box-sizing: border-box;
+    }
     header {
         width: 100%;
     }
+    #site-identity {
+        width: 60%;
+        padding-left: 20px;
+    }
     h1 {
-        font-size: 2em;
-        padding-left: none;
+        font-size: 1.9em;
     }
     #nav-ul {
         display: none;
@@ -295,17 +299,13 @@ footer a:hover {
     }
     #nav-ul.show {
         display: flex;
+        line-height: 300%;
     }
     .hamburger {
         display: block;
     }
-    /*li {
-        display: block;
-        padding: 0px;
-        line-height: 50px;
-    }*/
     .container{
-        width: 60%;
+        width: 90%;
     }
     table {
         display: none;
